# rebuildtest

./: .gitignore  CMakeLists.txt
code/liba/: a1.c  a2.c  a3.c  liba.h
code/libb/: b1.c  b2.c  b3.c  libb.h
code/main/: main.c
docs/: design.md  smart-build.md
libs/: liba.hash  libb.hash
